routetable.tf
resource "aws_route_table" "nicrotab1" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.nicrogg.id
  }
  depends_on = [
    aws_vpc.myvpc,
  ]
  tags = {
    Name = "nicro"
  }
}
