SG.tf
resource "aws_security_group" "test4" {
  name        = "test4"
  description = "Allow inbound traffic"
  vpc_id      = aws_vpc.myvpc.id
ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
depends_on = [
    aws_vpc.myvpc,
  ]
tags = {
    Name = "test4"
  }
}
